fix(Button): flex align-center

--- a/src/app/_components/Button.sass
+++ b/src/app/_components/Button.sass
@@ -9,6 +9,7 @@
   border: 1px solid var(--color-highlight)
   padding: 15px 10px
   font-weight: bold
+  align-items: center
 
   &#{&}--faux
     border-color: white
